# projetoEntradasaidadevalores

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_monthly_sheets.py  test_valor_parsing.py
app/: __init__.py  ai_parser.py  bot_handlers.py  config.py  drive_manager.py  main.py  models.py  sheets.py  utils.py  vision_analyzer.py
tests/: __init__.py  test_handlers.py  test_parser.py
